--- a/UntestableCode/pom.xml
+++ b/UntestableCode/pom.xml
@@ -40,7 +40,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <version>2.3.0.RELEASE</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
