--- a/UntestableCode/pom.xml
+++ b/UntestableCode/pom.xml
@@ -45,7 +45,21 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <version>2.3.0.RELEASE</version>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator-annotation-processor</artifactId>
+			<version>7.0.0.Alpha6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>6.0.18.Final</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
